se modifico la barra de navegacion que estaba mu salido

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!doctype html>
 
         <!-- ..!bs5-$ es para se autocomplete el bustrap.. -->
-<html lang="en">
+<html lang="es">
     <head>
         <title>Portafolio</title>
         <!-- Required meta tags -->
@@ -12,7 +12,7 @@
             content="width=device-width, initial-scale=1, shrink-to-fit=no"
         />
         <!--css adicional-->
-        <link rel="stylesheet" href="./estilos.css">
+        <link rel="stylesheet" href="./stilos/estilos.css">
         <!--JavaScrip adicional-->
         <script src="./main.js"></script>
         <!--linnk de los iconos awesone-->
@@ -92,22 +92,22 @@
               <div class="carousel-item active">
                 <img src="https://imagizer.imageshack.com/img922/64/jpMBhl.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>First slide label</h5>
-                  <p>Some representative placeholder content for the first slide.</p>
+                  <h5>titulo 1</h5>
+                  <p>Scomentario 1</p>
                 </div>
               </div>
               <div class="carousel-item">
                 <img src="https://imagizer.imageshack.com/img922/64/jpMBhl.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>Second slide label</h5>
-                  <p>Some representative placeholder content for the second slide.</p>
+                  <h5>titulo 2</h5>
+                  <p>Scomentario 2</p>
                 </div>
               </div>
               <div class="carousel-item">
                 <img src="https://imagizer.imageshack.com/img922/64/jpMBhl.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>Third slide label</h5>
-                  <p>Some representative placeholder content for the third slide.</p>
+                  <h5>titulo 3</h5>
+                  <p>Scomentario 3</p>
                 </div>
               </div>
             </div>
