se termina lo que es parte de la presentacion del foto y pequeño info

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <h1>Ermenigildo Orbezo Martinez</h1>
                 <h2>Tecnico Diseño y Desarrollo de Software</h2>
                 <div class="redes">
-                    <a href="#"><i class="fa-brands fa-facebook fa-beat"></i></a>
+                    <a href="#"><i class="fa-brands fa-facebook fa-beat" style="color: #3b00ec;"></i></a>
                     <a href="#"><i class="fa-brands fa-discord fa-beat" style="color: #B197FC;"></i></a>
                     <a href="#"><i class="fa-brands fa-instagram fa-beat" style="color: #ff2e2e;"></i></a>
                     <a href="#"><i class="fa-brands fa-twitter fa-beat" style="color: #0a5ae6;"></i></a>
@@ -80,6 +80,16 @@
                 </div>
             </div>
         </section>
+        <section class="informacion">
+          <div class="introduccion">
+            <h1 class="titulo"></h1>
+            <p class="parrafo">Soy un desarrollador apasionado con experiencia en Front End. 
+              Mi enfoque se centra en crear soluciones innovadoras utilizando tecnologías modernas como Java, Python, JavaScript, MongoDB, Docker. entre otros.
+                estoy comprometido a aportar valor a través de la tecnología.</p>
+          </div>
+
+        </section>
+
         <!--mi carrosel-->
         <div class="contenedor-carousel">
             <div id="carouselExampleCaptions" class="carousel slide custom-carousel">
