falta completa el seccion de sobre mi

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
                  </div>
                  <nav id="nav">
                     <ul>
-                        <li><a href="#">Inicio</a></li>
-                        <li><a href="#">Sobre mi</a></li>
+                        <li><a href="./index.html">Inicio</a></li>
+                        <li><a href="./sobreMi.html">Sobre mi</a></li>
                         <li><a href="#">Proyectos</a></li>
                         <li><a href="#">Curriculum</a></li>
                         <li><a href="#">Ciertificaciones</a></li>
