falta completar seccion de archivos

--- a/sobreMi.html
+++ b/sobreMi.html
@@ -24,15 +24,17 @@
             <header>
                 <!-- place navbar here -->
                  <div class="logo">
-                    <a href="#"><img src="https://imagizer.imageshack.com/img923/2096/GkpMoB.png" alt=""></a>
+                    <a href="./index.html">
+                        <img src="https://imagizer.imageshack.com/img923/2096/GkpMoB.png" alt="logo orbezo">
+                    </a>
                  </div>
                  <nav id="nav">
                     <ul>
                         <li><a href="./index.html">Inicio</a></li>
-                        <li><a href="#">Sobre mi</a></li>
+                        <li><a href="./sobreMi.html">Sobre mi</a></li>
                         <li><a href="#">Proyectos</a></li>
                         <li><a href="#">Curriculum</a></li>
-                        <li><a href="#">Ciertificaciones</a></li>
+                        <li><a href="./ciertificaciones.html">Ciertificaciones</a></li>
                         <li><a href="#">Contacta</a></li>                        
                     </ul>
                  </nav>
@@ -45,9 +47,24 @@
 
         </div>
         <section id="about" class="about-section">
-            <h2>Quien soy y que hago</h2>
-            <p>Soy Ermenegildo Orbezo, un desarrollador de software con experiencia en el diseño y desarrollo de aplicaciones que abordan necesidades reales. He trabajado en proyectos destacados como <strong>TechSavion</strong>, un sistema de gestión industrial, y <strong>Lavaplus</strong>, una innovadora aplicación de servicios de lavandería en Lima.</p>
-            <p>Mi formación abarca lenguajes y tecnologías como <strong>Java</strong>, <strong>MongoDB</strong>, <strong>Dart</strong> y <strong>Flutter</strong>, lo que me permite crear soluciones efectivas y escalables. Estoy comprometido con la sostenibilidad y la mejora de la calidad de vida a través de la tecnología, y siempre busco aprender y colaborar en proyectos que marquen una diferencia.</p>
+            <div class="titulo">
+                <h2>Quien soy y que hago</h2>
+            </div>
+            <div class="textos_descripcion">
+                <p>Soy Ermenegildo Orbezo, un desarrollador de software con experiencia en el diseño
+                    y desarrollo de aplicaciones que abordan necesidades reales. He trabajado en proyectos
+                     destacados como 
+                     <strong>TechSavion</strong>, un sistema de gestión industrial, y 
+                     <strong>Lavaplus</strong>, una innovadora aplicación de servicios de lavandería en Lima.</p>
+               <p>Mi formación abarca lenguajes y tecnologías como 
+                   <strong>Java</strong>, 
+                   <strong>MongoDB</strong>, 
+                   <strong>Dart</strong> y 
+                   <strong>Flutter</strong>, lo que me permite crear soluciones efectivas y escalables. 
+                   Estoy comprometido con la sostenibilidad y la mejora de la calidad de vida a través de la tecnología, 
+                   y siempre busco aprender y colaborar en proyectos que marquen una diferencia.</p>
+            </div>
+            
         </section>
         
         <main></main>
