--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         <li><a href="./sobreMi.html">Sobre mi</a></li>
                         <li><a href="#">Proyectos</a></li>
                         <li><a href="#">Curriculum</a></li>
-                        <li><a href="#">Ciertificaciones</a></li>
+                        <li><a href="./ciertificaciones.html">Ciertificaciones</a></li>
                         <li><a href="#">Contacta</a></li>                        
                     </ul>
                  </nav>
