se modifica la ciertificacion

--- a/ciertificaciones.html
+++ b/ciertificaciones.html
@@ -50,7 +50,7 @@
             <!-- Sidebar con botones -->
             <div class="sidebar">
                 <button class="btn btn-primary btn-option" onclick="showContent('opcion1')">Cisco Networking Academy</button>
-                <button class="btn btn-primary btn-option" onclick="showContent('opcion2')">Opción 2</button>
+                <button class="btn btn-primary btn-option" onclick="showContent('opcion2')">Experiencia Formativa</button>
                 <button class="btn btn-primary btn-option" onclick="showContent('opcion3')">Opción 3</button>
                 <button class="btn btn-primary btn-option" onclick="showContent('opcion4')">Opción 4</button>
             </div>
@@ -58,7 +58,7 @@
             <!-- Área de contenido dinámico -->
             <div class="content">
             <div id="opcion1" class="opcion-content" style="display: none;">
-               <h1>Cisco Networking Academy</h1>
+               <h1 class="titulo_ciertificado">Cisco Networking Academy</h1>
                 
                <p>Este certificado valida mis habilidades en el diseño, implementación y gestión de redes basadas en la tecnología Cisco.
                     A través de este curso, adquirí conocimientos en: <br>
@@ -69,7 +69,7 @@
                     <li>Seguridad en redes y mejores prácticas para la protección de infraestructuras.</li>
 
                    </p>
-               <img src="https://imagizer.imageshack.com/img923/2096/GkpMoB.png" alt="Imagen 1" class="img-fluid">
+               <img src="https://imagizer.imageshack.com/img923/9977/BzTd2d.jpg" alt="Imagen 1" class="img-fluid">
                <br><br>
                <a href="./document/ERMENIGILDOORBEZO MARTINEZ-CERTUS IMPLEMENT-certificate (1).pdf" class="btn btn-success">Descargar Archivo</a>
 
